# opkg

./: .gitignore  AUTHORS  CONTRIBUTORS  ChangeLog  ChangeLog.ipkg  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  args.c  autogen.sh  conffile.h  config.h.in  configure  configure.ac  file_util.c  install-sh  ipkg-frontend.c  ipkg.c  ipkg_cmd.c  ipkg_conf.c  ipkg_download.c  ipkg_extract_test.c  ipkg_hash_test.c  ipkg_install.c  ipkg_utils.c  libipkg.c  libipkg.pc.in  libopkg.c  libopkg.h  md5.c  nv_pair.c  opkg_cmd.c  opkg_configure.c  opkg_configure.h  opkg_download.c  opkg_download.h  opkg_hash_test.c  (+23 more)
etc/: Makefile.in
familiar/: Makefile.in  control-unstripped.in  control.in  libipkg-control.in  libipkg-dev-control.in  libopkg-control.in  libopkg-dev-control.in
libbb/: Makefile.am  Makefile.in  gz_open.c  libbb.h  make_directory.c  messages.c  unarchive.c  unzip.c  xfuncs.c
libopkg/: Makefile.am  active_list.c  active_list.h  args.c  args.h  conffile.c  conffile.h  conffile_list.c  conffile_list.h  file_util.c  file_util.h  hash_table.c  hash_table.h  includes.h  libopkg.c  libopkg.h  list.h  md5.c  md5.h  nv_pair.c  nv_pair_list.c  nv_pair_list.h  opkg.c  opkg.h  opkg_cmd.c  opkg_cmd.h  opkg_conf.c  opkg_conf.h  opkg_configure.c  opkg_configure.h  opkg_defines.h  opkg_download.c  opkg_download.h  opkg_error.h  opkg_install.c  opkg_install.h  opkg_message.c  opkg_message.h  opkg_pathfinder.c  opkg_pathfinder.h  (+43 more)
man/: opkg-cl.1  opkg-cl.1.in  opkg-key.1
src/: Makefile.am  opkg-cl.c  opkg-frontend.c
tests/: Makefile.am  libopkg_test.c  opkg_active_list_test.c  opkg_extract_test.c  opkg_hash_test.c
tests/regress/: Makefile  cfg.py  issue26.py  issue31.py  issue45.py  issue46.py  issue50.py  issue51.py  issue55.py  issue58.py  issue72.py  issue79.py  issue84.py  issue85.py  opk.py  opkgcl.py  update_loses_autoinstalled_flag.py
utils/: Makefile.am  update-alternatives  update-alternatives.in
