
noinst_PROGRAMS = opkg_hash_test opkg_extract_test

opkg_hash_test_LDADD = $(top_builddir)/libbb/libbb.la $(top_builddir)/libopkg/libopkg.la
opkg_hash_test_SOURCES = opkg_hash_test.c
opkg_hash_test_CFLAGS = $(ALL_CFLAGS) -I$(top_builddir)

opkg_extract_test_LDADD = $(top_builddir)/libbb/libbb.la $(top_builddir)/libopkg/libopkg.la
opkg_extract_test_SOURCES = opkg_extract_test.c
opkg_extract_test_CFLAGS = $(ALL_CFLAGS) -I$(top_builddir)


